removed duplicate type & updated error list

--- a/force-app/main/default/lwc/permissionSetProcessor/permissionSetProcessor.css
+++ b/force-app/main/default/lwc/permissionSetProcessor/permissionSetProcessor.css
@@ -178,3 +178,8 @@
     margin-left: 9px;
     margin-right: 9px;
 }
+
+.slds-modal__container {
+    max-width: 70rem !important;
+    width: 70% !important;
+}
